--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,14 @@ charset = utf-8
 [*.py]
 max_line_length = 88
 
+# javascript
+[*.js]
+indent_size = 2
+
+# typescript
+[*.ts]
+indent_size = 3
+
 # The JSON files contain newlines inconsistently
 [*.json]
 indent_size = 2
